Get rid of color background and fix horz spacing

--- a/stylesheets/base.css
+++ b/stylesheets/base.css
@@ -69,6 +69,10 @@ body {
   display: flex;
 }
 
+.semifixed {
+  position: fixed;
+}
+
 #banner {
   height: 50px;
   margin: 0 auto 0 auto;
@@ -83,7 +87,7 @@ body {
   margin-bottom: 0px;
   font-family: var(--body-font-family);
   font-weight: bold;
-  font-size: 3rem;
+  font-size: 2.5rem;
   font-variant: small-caps;
 }
 
@@ -335,17 +339,25 @@ pre > code {
   color: #5f466a;
 }
 
-@media screen and (max-width: 900px), screen and (max-device-width: 900px) {
+@media screen and (max-width: 1200px), screen and (max-device-width: 1200px) {
   /* line 277, ../sass/base.sass */
   html {
     font-size: 19.8px;
   }
 
+  #app {
+    flex-direction: column;
+  }
+
   div#main {
     /*margin: 0 auto 0 auto;*/
     /*width: 80%;*/
-    max-width: 500px;
-    /*max-width: 80%;*/
+    /*max-width: 500px;*/
+    max-width: 80%;
+  }
+
+  .semifixed {
+      position: unset;
   }
 
   /* line 281, ../sass/base.sass */
@@ -381,6 +393,10 @@ pre > code {
 
   #app {
     flex-direction: column;
+  }
+
+  .semifixed {
+    position: unset;
   }
 
   #banner {
